--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -10,7 +10,11 @@ body{
   background-color: #f8f8f8;
 }
 .f-mnt{font-family: "Montserrat", "Inter UI", -apple-system, BlinkMacSystemFont, "Roboto", "Liberation Sans", "Helvetica", "Arimo", "Arial", sans-serif;}
-.f-rpk{font-size:2rem;}
+.f-rpk{font-size: 2rem}
+.t-left{text-align: left}
+.t-center{text-align: center}
+.t-right{text-align: right}
+.t-justify{text-align: justify}
 
 /* Font Sizes */
 h1{font-size:1.75rem;letter-spacing:0.137255663596502pt;}
