--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,13 @@
 /* Reinhart P. K. 2018 */
+body{
+  margin: 0
+}
+.contentparent{
+  width: 100%
+}
 .contentcontainer{
   width: 100%;
-  margin:auto;
+  margin: auto;
 }
 @media screen and (min-width:1276px){
   .contentcontainer{
@@ -58,6 +64,20 @@ a{
   padding: 4px;
   color:inherit;
   text-decoration: none;
+}
+.titlebar {
+  width: 100%;
+  height: auto;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  color: #000000;
+  background-color: #ffffff
+}
+.titlebar p{
+  margin-top: 0;
+  margin-bottom: 0;
 }
 /* Specific Colors for Cards */
 .c-osm{background-color: #439A06; border:none;}
