blog: Add old posts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,13 +45,6 @@
   ADAB to Connect<br>
   Ayo Dengar Ayo Bicara
 </a>
-<a href="https://computerun.id" target="_blank" class="sidebar-link sidebar-link-with-icon">
-  <span class="sidebar-icon text-white" style="background-color: #0c1631">
-    <img src="/assets/img/logo/computerun-2020.png" alt="Icon">
-  </span>
-  COMPUTERUN 2020:<br>
-  INSIGHT
-</a>
 <a href="https://student.binus.ac.id/fyp/" target="_blank" class="sidebar-link sidebar-link-with-icon">
   <span class="sidebar-icon">
     <img src="/assets/img/logo/binus.ico" alt="Icon">
@@ -101,18 +94,7 @@
 <br />
 <h5 class="sidebar-title">Participating On</h5>
 <div class="sidebar-divider"></div>
-<a href="https://competition.binus.ac.id/icpc2020/" target="_blank" class="sidebar-link sidebar-link-with-icon">
-  <span class="sidebar-icon">
-    <img src="/assets/img/logo/icpc.ico" alt="Icon" width="30" height="30">
-  </span>
-  ICPC INC 2020
-</a>
-<a href="https://hacktoberfest.digitalocean.com/" target="_blank" class="sidebar-link sidebar-link-with-icon">
-  <span class="sidebar-icon">
-    <img src="/assets/img/logo/hacktoberfest-2020.ico" alt="Icon" width="30" height="30">
-  </span>
-  Hacktoberfest 2020
-</a>
+<i>None</i>
 <br />
 <h5 class="sidebar-title">Past Projects</h5>
 <div class="sidebar-divider"></div>
@@ -131,6 +113,13 @@
     </svg>
   </span>
   8TERNITY 2019:<br>CORUSCATE
+</a>
+<a href="https://computerun.id" target="_blank" class="sidebar-link sidebar-link-with-icon">
+  <span class="sidebar-icon text-white" style="background-color: #0c1631">
+    <img src="/assets/img/logo/computerun-2020.png" alt="Icon">
+  </span>
+  COMPUTERUN 2020:<br>
+  INSIGHT
 </a>
 <a href="https://github.com/bearcatsdev/hacktoberfest19" target="_blank" class="sidebar-link sidebar-link-with-icon">
   <span class="sidebar-icon w3-metro-purple text-white">
@@ -186,6 +175,18 @@
     <i class="fa fa-lg fa-digitalocean" aria-hidden="true"></i>
   </span>
   Hacktoberfest 2019
+</a>
+<a href="https://hacktoberfest.digitalocean.com/" target="_blank" class="sidebar-link sidebar-link-with-icon">
+  <span class="sidebar-icon">
+    <img src="/assets/img/logo/hacktoberfest-2020.ico" alt="Icon" width="30" height="30">
+  </span>
+  Hacktoberfest 2020
+</a>
+<a href="https://competition.binus.ac.id/icpc2020/" target="_blank" class="sidebar-link sidebar-link-with-icon">
+  <span class="sidebar-icon">
+    <img src="/assets/img/logo/icpc.ico" alt="Icon" width="30" height="30">
+  </span>
+  ICPC INC 2020
 </a>
 <a href="https://kotakode.com/challenges" target="_blank" class="sidebar-link sidebar-link-with-icon">
   <span class="sidebar-icon w3-metro-teal text-white">
