feat: add new colors

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,3 +6,22 @@
 
 <!-- Favicon and title -->
 <title>Reinhart Previano K.</title>
+
+<!-- Primary Meta Tags -->
+<title>Reinhart Previano K.</title>
+<meta name="title" content="Reinhart Previano K.">
+<meta name="description" content="">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://reinhart1010.github.io/">
+<meta property="og:title" content="Reinhart Previano K.">
+<meta property="og:description" content="">
+<!-- <meta property="og:image" content=""> -->
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://reinhart1010.github.io/">
+<meta property="twitter:title" content="Reinhart Previano K.">
+<meta property="twitter:description" content="">
+<!-- <meta property="twitter:image" content=""> -->
