--- a/_layouts/archive-category.html
+++ b/_layouts/archive-category.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <div class="content">
-  <h1>Posts under '{{ page.title }}'</h1>
+  <h1>{{ site.data.categories[page.title].name | default: page.title }}</h1>
   <ul class="posts">
     {% for post in page.posts %}
       <li>
