--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,48 +25,80 @@
     <div class="sticky-alerts"></div>
 
     <!-- Navbar start -->
-    <nav class="navbar">
+    {% assign current_universe = page.categories.last | default: page.title | default: "home" %}
+    {% assign theme_color = site.data.categories[current_universe].theme_color | default: "NULL" %}
+    <nav class="navbar justify-content-between justify-content-lg-start"
+    {% if theme_color != "NULL" %}
+      style="background-color: {{ site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 }}; color: white;"
+    {% endif %}>
       <!-- Reference: https://www.gethalfmoon.com/docs/navbar -->
       <!-- Navbar content (with toggle sidebar button) -->
       <div class="navbar-content">
-        <button class="btn btn-action" type="button" onclick="halfmoon.toggleSidebar()">
-          <svg class="bi" width="32" height="32" fill="currentColor">
-            <use xlink:href="/assets/img/bootstrap-icons.svg#list"/>
-          </svg>
+        <button class="btn btn-action" type="button" onclick="halfmoon.toggleSidebar()"
+        {% if theme_color != "NULL" %}
+          style="background: none; border: none; box-shadow: none; color: white"
+        {% endif %}>
+          <i class="fa fa-bars" aria-hidden="true"></i>
           <span class="sr-only">Toggle sidebar</span> <!-- sr-only = show only on screen readers -->
         </button>
       </div>
+
+      <div class="navbar-content ml-auto">
+        <a class="btn universe-title" href="#select-universe"
+        {% if theme_color != "NULL" %}
+          style="background: none; border: none; box-shadow: none; color: white"
+        {% endif %}>
+          {{current_universe | replace: "-", " "}} <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </a>
+      </div>
+
       <!-- Navbar brand -->
-      <a href="/" class="navbar-brand">
+      <!-- <a href="/" class="navbar-brand">
         Reinhart Previano K.
-      </a>
+      </a> -->
       <!-- Navbar text -->
-      <span class="navbar-text text-monospace">v19.3</span> <!-- text-monospace = font-family shifted to monospace -->
+      <!-- <span class="navbar-text text-monospace">v19.3</span> text-monospace = font-family shifted to monospace -->
       <!-- Navbar nav -->
       <ul class="navbar-nav d-none d-md-flex"> <!-- d-none = display: none, d-md-flex = display: flex on medium screens and up (width > 768px) -->
         <li class="nav-item">
-          <a href="#explore" class="nav-link">Explore</a>
-        </li>
-        <li class="nav-item">
-          <a href="#partners" class="nav-link">Partners and Relations</a>
+          <a href="/" class="nav-link">Home</a>
         </li>
       </ul>
       <!-- Navbar content (with the dropdown menu) -->
       <div class="navbar-content d-md-none ml-auto"> <!-- d-md-none = display: none on medium screens and up (width > 768px), ml-auto = margin-left: auto -->
         <div class="dropdown with-arrow">
-          <button class="btn btn-action" data-toggle="dropdown" type="button" id="navbar-dropdown-toggle-btn-1">
-            <svg class="bi" width="32" height="32" fill="currentColor">
-              <use xlink:href="/assets/img/bootstrap-icons.svg#three-dots-vertical"/>
-            </svg>
+          <button class="btn btn-action" data-toggle="dropdown" type="button" id="navbar-dropdown-toggle-btn-1"
+          {% if theme_color != "NULL" %}
+            style="background: none; border: none; box-shadow: none; color: white"
+          {% endif %}>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
           </button>
           <div class="dropdown-menu dropdown-menu-right w-200" aria-labelledby="navbar-dropdown-toggle-btn-1"> <!-- w-200 = width: 20rem (200px) -->
-            <a href="#explore" class="dropdown-item">Explore</a>
-            <a href="#partners" class="dropdown-item">Partners and Relations</a>
+            <a href="/" class="dropdown-item">Homepage</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- Navbar end -->
+
+    <!-- Full-screen modal -->
+    <div class="modal modal-full ie-scroll-fix" id="select-universe" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <a href="#" class="close" role="button" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </a>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-10 offset-lg-1">
+                <!-- Article here -->
+                {% include select-universe.html %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Sidebar start -->
     <div class="sidebar">
@@ -84,6 +116,6 @@
   <!-- Page wrapper end -->
 
   <!-- Halfmoon JS -->
-  <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.0/js/halfmoon.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
 </body>
 </html>
