--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       <!-- Reference: https://www.gethalfmoon.com/docs/navbar -->
       <!-- Navbar content (with toggle sidebar button) -->
       <div class="navbar-content">
-        <button class="btn btn-action" type="button" onclick="halfmoon.toggleSidebar()"
+        <button class="btn btn-action font-size-18" type="button" onclick="halfmoon.toggleSidebar()"
         {% if theme_color != "NULL" %}
           style="background: none; border: none; box-shadow: none; color: white"
         {% endif %}>
@@ -43,8 +43,22 @@
         </button>
       </div>
 
+      <!-- Navbar brand -->
+      <a href="/" class="navbar-brand d-none d-md-block"
+      {% if theme_color != "NULL" %}
+        style="color: white"
+      {% endif %}>
+        Reinhart Previano K.
+      </a>
+      <!-- Navbar text -->
+      <span class="navbar-text text-monospace d-none d-md-block"
+      {% if theme_color != "NULL" %}
+        style="color: white"
+      {% endif %}>v19.4</span>
+
+      <!-- Universe Dropdown -->
       <div class="navbar-content ml-auto">
-        <a class="btn universe-title" href="#select-universe"
+        <a class="btn universe-title font-size-18" href="#select-universe"
         {% if theme_color != "NULL" %}
           style="background: none; border: none; box-shadow: none; color: white"
         {% endif %}>
@@ -52,32 +66,26 @@
         </a>
       </div>
 
-      <!-- Navbar brand -->
-      <!-- <a href="/" class="navbar-brand">
-        Reinhart Previano K.
-      </a> -->
-      <!-- Navbar text -->
-      <!-- <span class="navbar-text text-monospace">v19.3</span> text-monospace = font-family shifted to monospace -->
       <!-- Navbar nav -->
-      <ul class="navbar-nav d-none d-md-flex"> <!-- d-none = display: none, d-md-flex = display: flex on medium screens and up (width > 768px) -->
-        <li class="nav-item">
+      <!-- <ul class="navbar-nav d-none d-md-flex">
+        <li class="nav-item font-size-18">
           <a href="/" class="nav-link">Home</a>
         </li>
-      </ul>
+      </ul> -->
       <!-- Navbar content (with the dropdown menu) -->
-      <div class="navbar-content d-md-none ml-auto"> <!-- d-md-none = display: none on medium screens and up (width > 768px), ml-auto = margin-left: auto -->
+      <!-- <div class="navbar-content d-md-none ml-auto">
         <div class="dropdown with-arrow">
-          <button class="btn btn-action" data-toggle="dropdown" type="button" id="navbar-dropdown-toggle-btn-1"
+          <button class="btn btn-action font-size-18" data-toggle="dropdown" type="button" id="navbar-dropdown-toggle-btn-1"
           {% if theme_color != "NULL" %}
             style="background: none; border: none; box-shadow: none; color: white"
           {% endif %}>
             <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
           </button>
-          <div class="dropdown-menu dropdown-menu-right w-200" aria-labelledby="navbar-dropdown-toggle-btn-1"> <!-- w-200 = width: 20rem (200px) -->
+          <div class="dropdown-menu dropdown-menu-right w-200" aria-labelledby="navbar-dropdown-toggle-btn-1">
             <a href="/" class="dropdown-item">Homepage</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </nav>
     <!-- Navbar end -->
 
