--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   rgba(0,0,0,0) 20px,
   rgba(0,0,0,0.1) 20px,
   rgba(0,0,0,0.1) 40px
-); color: #ffffff; font-size: 1em">
+); color: #ffffff; font-size: 1em; word-wrap: break-word;">
   <h2 class="m-0">{{ page.title }}</h2>
   <b class="font-size-16">{{ page.date | date: "%B %-d, %Y" }} | {% for category in page.categories %}<a class="inline badge" href="/category/{{category}}">@{{category}}</a> {% endfor %} {% for tag in page.tags %}<a class="inline badge" href="/tag/{{tag}}">#{{tag}}</a> {% endfor %}</b>
   <!-- <h5>Let there be a #developer #Crewmate #AmongUs,<br>#BuildingTheNation and bringing <code>SELECT * FROM</code> your #DisneyPlus dreams <code>return true;</code><br>As high as #Mulan's (#IndiHome Paket) Phoenix,<br>and as close as the 0s and 1s of #Sayu and #1010.<br><br>Let our mission of #FosteringAndEmpowering may not simply fail at the #SANDBOX,<br>or into the grims of #MasterChefIndonesia's Pressure Tests.<br>Even both #Cyberpunk2077 and #HenryStickminCollection have seen their bright future,<br>because they are actually set in the future.<br><br>Finally, before you go,<br>#MayTheForceBeWithYou against all #Impostors.<br>#StartUp and #FollowYourDream even when there are #NoStraightRoads,<br>as #BrightAsTheSun, said #AsianGames2018.</h5> -->
