--- a/_sass/reinhart1010-jekyll.scss
+++ b/_sass/reinhart1010-jekyll.scss
@@ -442,6 +442,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .blog.content {
   font-size: 1.25em;
   line-height: 1.75;
+  word-wrap: break-word;
 }
 .blog.content img {
   max-width: 100%;
