--- a/_includes/select-universe.html
+++ b/_includes/select-universe.html
@@ -1,16 +1,23 @@
-<h1>Select Topics</h1>
+<h1 class="mt-20 pt-20">Select Category</h1>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 col-md-6 col-lg-4 font-size-18">
-      <div class="card m-10 shadow-lg" style="background-color: #0094ff; color: white;">
-        <div class="h-250 h-md-200">
-          <h3 class="mt-0">Home</h3>
-          <p>
-            also known as, <b>All/Other</b>
-          </p>
+      <div class="card m-10 shadow-lg">
+        <div class="h-200">
+          <h3 class="mt-0"><i class="fa fa-home text-primary" aria-hidden="true"></i> Home</h3>
         </div>
         <div class="text-right"> <!-- text-right = text-align: right -->
-          <a href="/" class="btn btn-lg btn-light shadow-lg"><b>Visit</b></a>
+          <a href="/" class="btn btn-lg btn-primary shadow-lg"><b>Visit</b></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 font-size-18">
+      <div class="card m-10 shadow-lg">
+        <div class="h-200">
+          <h3 class="mt-0"><i class="fa fa-rss-square text-danger" aria-hidden="true"></i> All/Other Posts</h3>
+        </div>
+        <div class="text-right"> <!-- text-right = text-align: right -->
+          <a href="/posts" class="btn btn-lg btn-danger shadow-lg"><b>Visit</b></a>
         </div>
       </div>
     </div>
@@ -21,17 +28,17 @@
     <div class="col-12 col-md-6 col-lg-4 font-size-18">
       <div class="card m-10 shadow-lg"
       {% if theme_color != "NULL" %}
-        style="background-color: {{ site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 }}; color: white;"
+        style="background-color: {{ site.data.colors[theme_color.primary].700 | default: site.data.colors[theme_color].700 }}; color: white;"
       {% endif %}
       >
-        <div class="h-250 h-md-200">
+        <div class="h-200">
           <h3 class="mt-0">{{ site.data.categories[category_name].name | default: category[0] }}</h3>
           <p>
             {{ site.data.categories[category_name].description | default: "" }}</b>
           </p>
         </div>
         <div class="text-right"> <!-- text-right = text-align: right -->
-          <a href="/category/{{ category[0] }}" class="btn btn-lg shadow-lg" 
+          <a href="/posts/category/{{ category[0] }}" class="btn btn-lg shadow-lg" 
           {% if theme_color != "NULL" %}
             style="background-color: {{ site.data.colors[theme_color.secondary].500 | default: site.data.colors[theme_color].500 }}; color: white;"
           {% endif %}><b>Visit</b></a>
