--- a/_layouts/archive-category.html
+++ b/_layouts/archive-category.html
@@ -4,12 +4,59 @@ layout: page
 
 <div class="content">
   <h1>{{ site.data.categories[page.title].name | default: page.title }}</h1>
-  <ul class="posts">
-    {% for post in page.posts %}
-      <li>
-        <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a>
-      </li>
+  {% assign count = 0 %}
+  {% assign count_limit = site.paginate | times: 5 %}
+  <!-- The posts (generated from Jekyll) are loaded into this template, to be mixed -->
+  <pre id="raw_json" class="d-none">
+  [
+    {% for post in page.posts limit: count_limit %}
+    {% assign category_name = post.categories.last %}{% assign theme_color = site.data.categories[category_name].theme_color | default: "NULL" %}{% assign theme_color_primary = site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 | default: "NULL" %}
+    {% if count > 0 %},{% endif %}
+    {"type": "Reinhart.article", {% if post.cover_image %}"image": "{{ post.cover_image }}",{% endif %}
+      {% if theme_color_primary != "NULL" %}
+      "color": {
+        "background": "{{ theme_color_primary }}",
+        "foreground": "white"
+      },
+      {% endif %}
+      "body": {
+        "subtitle": "{{ post.date | date: "%B %-d, %Y" }}",
+        "title": "{{ post.title }}",
+        "description": "{% if post.description %}{{ post.description }}&lt;br&gt;{% endif %}&lt;span {% if theme_color_primary != "NULL" %}class='dark-mode bg-transparent'{% endif %}&gt;{% for category in post.categories %}&lt;a href='/posts/category/{{category}}' class='inline badge font-size-16'&gt;@{{category}}&lt;/a&gt; {% endfor %} {% for tag in post.tags %}&lt;a href='/posts/tag/{{tag}}' class='inline badge font-size-16'&gt;#{{tag}}&lt;/a&gt; {% endfor %}&lt;/span&gt;"
+      },
+      "actions": [
+          {
+              "title": "More Info",
+              "url": "{{ post.url }}"
+          }
+      ]
+    }
+    {% assign count = count | plus: 1 %}
     {% endfor %}
-  </ul>
+  ]
+  </pre>
+  <div class="container-fluid">
+    <div id="card-container">
+      <!-- To be automatically filled --> 
+    </div>
+    <p class="text-center font-size-20 font-weight-bolder">Find more posts <a href="/posts">here</a>.</p>
+  </div>
 </div>
+<script>
+function preloadCards(){
+  let data = null;
+  let list2 = document.getElementById("raw_json").innerHTML;
+
+  document.getElementById("raw_json").innerHTML = ""
+
+  try {
+    data = JSON.parse(list2.replace(/&lt;/g, "<").replace(/&gt;/g, ">"));
+  } catch (e) {
+    return;
+  }
+  if (!Array.isArray(data)) return;
+  loadCards(data);
+}
+
+setTimeout(preloadCards, 0);
+</script>
