--- a/_layouts/archive-day.html
+++ b/_layouts/archive-day.html
@@ -3,13 +3,12 @@ layout: page
 ---
 
 <div class="content">
-  <h1>Posts tagged #{{ page.title }}</h1>
+  <h1>Archive of posts from {{ page.date | date: "%B %-d, %Y" }}</h1>
   {% assign count = 0 %}
-  {% assign count_limit = site.paginate | times: 5 %}
   <!-- The posts (generated from Jekyll) are loaded into this template, to be mixed -->
   <pre id="raw_json" class="d-none">
   [
-    {% for post in page.posts limit: count_limit %}
+    {% for post in page.posts %}
     {% assign category_name = post.categories.last %}{% assign theme_color = site.data.categories[category_name].theme_color | default: "NULL" %}{% assign theme_color_primary = site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 | default: "NULL" %}
     {% if count > 0 %},{% endif %}
     {"type": "Reinhart.article", {% if post.cover_image %}"image": "{{ post.cover_image }}",{% endif %}
