--- a/_includes/select-universe.html
+++ b/_includes/select-universe.html
@@ -25,10 +25,11 @@
     {% for category in categories %}
     {% assign category_name = category[0] %}
     {% assign theme_color = site.data.categories[category_name].theme_color | default: "NULL" %}
+    {% assign theme_color_foreground = site.data.categories[category_name].theme_color_foreground | default: "white" %}
     <div class="col-12 col-md-6 col-lg-4 font-size-18">
       <div class="card m-10 shadow-lg"
       {% if theme_color != "NULL" %}
-        style="background-color: {{ site.data.colors[theme_color.primary].700 | default: site.data.colors[theme_color].700 }}; color: white;"
+        style="background-color: {{ theme_color.primary | default: theme_color }}; color: {{ theme_color_foreground.primary | default: theme_color_foreground }};"
       {% endif %}
       >
         <div class="h-200">
@@ -38,10 +39,7 @@
           </p>
         </div>
         <div class="text-right"> <!-- text-right = text-align: right -->
-          <a href="/posts/category/{{ category[0] }}" class="btn btn-lg shadow-lg" 
-          {% if theme_color != "NULL" %}
-            style="background-color: {{ site.data.colors[theme_color.secondary].500 | default: site.data.colors[theme_color].500 }}; color: white;"
-          {% endif %}><b>Visit</b></a>
+          <a href="/posts/category/{{ category[0] }}" class="btn btn-lg shadow-lg bg-light text-dark"><b>Visit</b></a>
         </div>
       </div>
     </div>
