--- a/_layouts/archive-year.html
+++ b/_layouts/archive-year.html
@@ -7,34 +7,7 @@ layout: page
   {% assign count = 0 %}
   <!-- The posts (generated from Jekyll) are loaded into this template, to be mixed -->
   <pre id="raw_json" class="d-none">
-  [
-    {% for post in page.posts %}
-    {% assign category_name = post.categories.last %}
-    {% assign theme_color = post.theme_color | default: site.data.categories[category_name].theme_color | default: "NULL" %}
-    {% assign theme_color_primary = post.theme_color | default: site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 | default: "NULL" %}
-    {% if count > 0 %},{% endif %}
-    {"type": "Reinhart.article", {% if post.cover_image %}"image": "{{ post.cover_image }}",{% endif %}
-      {% if theme_color_primary != "NULL" %}
-      "color": {
-        "background": "{{ theme_color_primary }}",
-        "foreground": "white"
-      },
-      {% endif %}
-      "body": {
-        "subtitle": "{{ post.date | date: "%B %-d, %Y" }}",
-        "title": "{{ post.title }}",
-        "description": "{% if post.description %}{{ post.description }}&lt;br&gt;{% endif %}&lt;span {% if theme_color_primary != "NULL" %}class='dark-mode bg-transparent'{% endif %}&gt;{% for category in post.categories %}&lt;a href='/posts/category/{{category}}' class='inline badge font-size-16'&gt;@{{category}}&lt;/a&gt; {% endfor %} {% for tag in post.tags %}&lt;a href='/posts/tag/{{tag}}' class='inline badge font-size-16'&gt;#{{tag}}&lt;/a&gt; {% endfor %}&lt;/span&gt;"
-      },
-      "actions": [
-          {
-              "title": "More Info",
-              "url": "{{ post.url }}"
-          }
-      ]
-    }
-    {% assign count = count | plus: 1 %}
-    {% endfor %}
-  ]
+    {% include card-generator.html posts=page.posts %}
   </pre>
   <div class="container-fluid">
     <div id="card-container">
