--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,16 +27,17 @@
     <!-- Navbar start -->
     {% assign current_universe = page.categories.last | default: page.title | default: "home" %}
     {% assign theme_color = site.data.categories[current_universe].theme_color | default: "NULL" %}
+    {% assign theme_color_foreground = site.data.categories[current_universe].theme_color_foreground %}
     <nav class="navbar justify-content-between justify-content-lg-start"
     {% if theme_color != "NULL" %}
-      style="background-color: {{ site.data.colors[theme_color.primary].600 | default: site.data.colors[theme_color].600 }}; color: white;"
+      style="background-color: {{ theme_color.primary | default: theme_color }};"
     {% endif %}>
       <!-- Reference: https://www.gethalfmoon.com/docs/navbar -->
       <!-- Navbar content (with toggle sidebar button) -->
       <div class="navbar-content">
         <button class="btn btn-action font-size-18" type="button" onclick="halfmoon.toggleSidebar()"
         {% if theme_color != "NULL" %}
-          style="background: none; border: none; box-shadow: none; color: white"
+          style="background: none; border: none; box-shadow: none; color: {{ theme_color_foreground.primary | default: theme_color_foreground | default: 'white'}};"
         {% endif %}>
           <i class="fa fa-bars" aria-hidden="true"></i>
           <span class="sr-only">Toggle sidebar</span> <!-- sr-only = show only on screen readers -->
@@ -46,21 +47,21 @@
       <!-- Navbar brand -->
       <a href="/" class="navbar-brand d-none d-md-block"
       {% if theme_color != "NULL" %}
-        style="color: white"
+        style="color: {{ theme_color_foreground.primary | default: theme_color_foreground | default: 'white'}};"
       {% endif %}>
         Reinhart Previano K.
       </a>
       <!-- Navbar text -->
       <span class="navbar-text text-monospace d-none d-md-block"
       {% if theme_color != "NULL" %}
-        style="color: white"
+        style="color: {{ theme_color_foreground.primary | default: theme_color_foreground | default: 'white'}};"
       {% endif %}>v19.4</span>
 
       <!-- Universe Dropdown -->
       <div class="navbar-content ml-auto">
         <a class="btn universe-title font-size-18" href="#select-universe"
         {% if theme_color != "NULL" %}
-          style="background: none; border: none; box-shadow: none; color: white"
+          style="background: none; border: none; box-shadow: none; color: {{ theme_color_foreground.primary | default: theme_color_foreground | default: 'white'}};"
         {% endif %}>
           {{current_universe | replace: "-", " "}} <i class="fa fa-chevron-down" aria-hidden="true"></i>
         </a>
@@ -93,7 +94,7 @@
     <div class="modal modal-full ie-scroll-fix" id="select-universe" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <a href="#" class="close" role="button" aria-label="Close">
+          <a onclick="window.history.go(-1); return false;" href="#" class="close" role="button" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </a>
           <div class="container-fluid">
