blog: Add SAT notice

--- a/_sass/reinhart1010-jekyll.scss
+++ b/_sass/reinhart1010-jekyll.scss
@@ -31,7 +31,7 @@
   }
 }
 
-body { font-family: 'Inter', sans-serif; }
+body { font-family: 'Inter', sans-serif; letter-spacing: -0.01em; }
 @supports (font-variation-settings: normal) {
   body { font-family: 'Inter var', sans-serif; }
 }
