feat: Add "force_redirect" feature

--- a/_includes/card-generator.html
+++ b/_includes/card-generator.html
@@ -21,7 +21,7 @@
   "actions": [
       {
           "title": "More Info",
-          "url": "{{ post.url }}"
+          "url": "{{ post.options.force_redirect | default: post.url }}"
       }
   ]
 }
